feat(sso-client): Add comprehensive security tests and fix vulnerabilities
Security Fixes:
- Fix Open Redirect vulnerability in globalLogoutUrl endpoint
- Add RedirectUrlValidator helper with domain whitelist support
- Add security configuration for allowed redirect hosts

Security Tests Added:
- Open Redirect prevention (25 test cases)
- JWT token validation and manipulation prevention
- SSO code security (invalid, expired, reused)
- Authentication security (protected endpoints)
- Input validation (length limits, sanitization)
- Data exposure prevention (no sensitive fields in responses)
- Session security

Test Infrastructure:
- Add Sanctum personal_access_tokens migration for mobile tests
- Add factory states (withoutConsoleUserId, withoutPassword, etc.)
- Update autoload for Database\Factories namespace

Total: 448 tests, 851 assertions

--- a/packages/omnify-sso-client/composer.json
+++ b/packages/omnify-sso-client/composer.json
@@ -30,7 +30,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Omnify\\SsoClient\\": "src/"
+            "Omnify\\SsoClient\\": "src/",
+            "Database\\Factories\\": "database/factories/"
         }
     },
     "autoload-dev": {
